--- a/build.gradle
+++ b/build.gradle
@@ -24,33 +24,24 @@ jar {
 
 repositories {
     mavenCentral()
+    maven { url 'https://devtools.ngdc.noaa.gov/artifactory/contrib-release-local' }
 }
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
+    //localGroovy()
     compile("org.springframework.boot:spring-boot-starter")
-    compile('org.codehaus.groovy:groovy')
+    compile('org.codehaus.groovy:groovy-all')
+    compile('org.springframework.boot:spring-boot-starter-jdbc')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile 'org.spockframework:spock-core:1.1-groovy-2.4'
     testCompile 'org.spockframework:spock-spring:1.1-groovy-2.4'
-
-
+    compile 'com.oracle:ojdbc8:12.2.0.1'
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
 //    compile("org.springframework:spring-jdbc")
 //    compile("com.h2database:h2")
     testCompile("junit:junit")
 }
-group 'ncei.gis'
-version '1.0-SNAPSHOT'
 
-apply plugin: 'groovy'
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.3.11'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-}
