--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile 'org.spockframework:spock-core:1.1-groovy-2.4'
     testCompile 'org.spockframework:spock-spring:1.1-groovy-2.4'
-    //compile 'com.oracle:ojdbc8:12.2.0.1'
+    compile 'com.oracle:ojdbc8:12.2.0.1'
     compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
 //    compile("org.springframework:spring-jdbc")
     compile("com.h2database:h2")
