--- a/build.gradle
+++ b/build.gradle
@@ -15,11 +15,11 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 
 group = 'ncei.gis'
-version = '0.1.0'
+version = '1.0.0-SNAPSHOT'
 
 jar {
     baseName = 'mb-tiles'
-    version =  '0.1.0'
+    version =  '1.0.0-SNAPSHOT'
 }
 
 repositories {
